@@ -1,0 +1,14 @@
+// Copyright 2002-2013, University of Colorado Boulder
+
+/**
+ * Shared constants for the Balancing Act simulation.
+ */
+define( function( require ) {
+  'use strict';
+
+  return {
+    MAX_REMOVAL_ANIMATION_DURATION: 0.75, // In seconds
+    MIN_ANIMATION_VELOCITY: 3 // In meters/sec.
+  };
+} );
+
