@@ -1,3 +1,4 @@
+12/2/2013 Added brick stacks to both the model and view.
 11/29/2013 Added basic model & view classes for the 2nd screen.
 11/29/2013 Finished implementing all of the basic functionality of the 1st screen.
 # 0.0.0-dev.2
